--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "lucide-react": "^0.553.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.5.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
