--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@uiw/react-textarea-code-editor": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.553.0",
     "next": "^14.0.0",
