--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
