--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "autoprefixer": "^10.4.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.0",
     "eslint-plugin-react": "^7.37.5",
