--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^2.0.7",
+    "swagger-ui-react": "^5.30.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
