feat(billing): Add Stripe integration with checkout, portal, and webhook handling
- Add Stripe API routes for checkout session creation and customer portal access
- Implement webhook handler for subscription lifecycle events (created, updated, deleted)
- Add webhook handlers for invoice payment events (paid, payment_failed)
- Create SubscriptionService for managing checkout and portal sessions
- Add Stripe client configuration and initialization
- Create billing page with subscription management UI
- Add billing success page for post-checkout redirect
- Create pricing page displaying available subscription plans
- Add Plan and Subscription models to Prisma schema
- Add WebhookEvent model for tracking and logging Stripe webhooks
- Create seed script for initializing subscription plans
- Add utility script for updating Stripe product and price IDs
- Update environment variables with Stripe configuration and price IDs
- Add Stripe integration documentation guide
- Update package.json with Stripe dependency
- Update Header component to include billing navigation link
- Enable subscription feature flag in environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,36 @@
 # Database
-DATABASE_URL="postgresql://user:password@host:port/dbname?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
+DIRECT_URL="postgresql://user:password@localhost:5432/dbname"
 
 # NextAuth
-NEXTAUTH_SECRET=your-secret-here
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-key-here"
 
-# Authentication Providers
-# Google
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# OAuth Providers
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GITHUB_CLIENT_ID="your-github-client-id"
+GITHUB_CLIENT_SECRET="your-github-client-secret"
 
-# GitHub
-GITHUB_CLIENT_ID=your-github-client-id
-GITHUB_CLIENT_SECRET=your-github-client-secret
+# Stripe (Test Keys)
+STRIPE_SECRET_KEY="sk_test_..."
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..."
+STRIPE_WEBHOOK_SECRET="whsec_..."
+
+# Stripe Price IDs (create these in Stripe Dashboard)
+STRIPE_PRICE_ID_PRO_MONTHLY="price_..."
+STRIPE_PRICE_ID_PRO_YEARLY="price_..."
+STRIPE_PRICE_ID_TEAM_MONTHLY="price_..."
+STRIPE_PRICE_ID_TEAM_YEARLY="price_..."
+
+# Stripe Product IDs
+STRIPE_PRODUCT_ID_PRO="prod_..."
+STRIPE_PRODUCT_ID_TEAM="prod_..."
+
+# App Configuration
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_NAME="API Specs Manager"
+
+# Feature Flags
+ENABLE_SUBSCRIPTIONS="true"
+ENABLE_STRIPE_BILLING="true"
