--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/stripe-js": "^8.5.2",
     "@uiw/react-textarea-code-editor": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,6 +46,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.5.0",
     "sonner": "^2.0.7",
+    "stripe": "^20.0.0",
     "swagger-ui-react": "^5.30.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
